# iotivity-apps

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
app/: client.c  default_menu.h  obt.c  server.c
debian/: changelog  control  rules
src/: common.c  common.h  crudn.c  crudn.h  security.c  security.h
svr/: generate_c.sh  obt_svr_db.json  server_svr_db.json  tpl_foot.c  tpl_head.c
